--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,7 +1,6 @@
 <!--pages/posts/post-detail/post-detail.wxml-->
 <view class='container'>
-  <image class='head-image' src='{{isPlayingMusic?postData.music.coverImg : postData.headImgSrc}}'></image>
-  <image catchtap='onMusicTap' class='audio' src="{{isPlayingMusic? '/images/music/music-stop.png' : '/images/music/music-start.png'}}"></image>
+  <image class='head-image' src='{{postData.headImgSrc}}'></image>
   <view class='author-date'>
     <image class='avatar' src='{{postData.avatar}}'></image>
     <text class='author'>{{postData.author}}</text>
