--- a/pages/music/music-detail/music-detail.wxml
+++ b/pages/music/music-detail/music-detail.wxml
@@ -1,134 +1,106 @@
-<import src="../music-controller/music-controller-template.wxml"/>
+<import src="../music-controller/music-controller-template.wxml" />
 <!-- <view class='underskin'> -->
 
-<image class='bg-img' src='http://p2.music.126.net/UL2iOIcKR3VsIpx4TNipFA==/109951163858678631.jpg?param=140y140' mode='aspectFill'></image>
-<!-- </view> -->
+<block wx:if="{{currentAlbumId==='my-cllections'}}">
+<image class='bg-img' src='/images/icon/bgimg.png'></image>
 <view class='heads'>
-  <image class='cover-img' src='http://p2.music.126.net/UL2iOIcKR3VsIpx4TNipFA==/109951163858678631.jpg?param=140y140'></image>
+  <image class='cover-img' src='/images/icon/myspace.png'></image>
   <view class='right-heads'>
-    <text class='title'>我喜欢的音乐 热单Remixes|知名歌曲</text>
+    <text class='title'>我喜欢的音乐</text>
     <view class='statis'>
-      <image class='listen' src='/images/icon/listen.png'></image>
-      <text class='listened-count'>收听量</text>
+      <image class='listen' src='/images/icon/avatar.png'></image>
+      <text class='listened-count'>我的昵称</text>
     </view>
   </view>
 </view>
+</block>
 
-<view class='e-function'>
-<view class='functions'>
-  <view class='function'>
-    <image src='/images/icon/e_play.png'></image>
-    <text>播放</text>
-  </view>
-  <view class='function' catchtap='onCollectionTap'>
-    <image src="{{collected? '/images/icon/d_collect.png' : '/images/icon/e_collect.png'}}"></image>
-    <text>收藏</text>
-  </view>
-  <view class='function'>
-    <image src='/images/icon/e_comment.png'></image>
-    <text>评论</text>
-  </view>
-  <view class='function'>
-    <image src='/images/icon/e_share.png'></image>
-    <text>分享</text>
+<block wx:elif="{{currentAlbumId==='daily-recom'}}">
+<image class='bg-img' src='/images/icon/bgimg.png'></image>
+<view class='heads'>
+  <image class='cover-img' src='/images/icon/calendar.png'></image>
+  <view class='right-heads'>
+    <text class='title'>每日推荐</text>
+    <view class='statis'>
+      <image class='listen' src='/images/icon/avatar.png'></image>
+      <text class='listened-count'>我的昵称</text>
+    </view>
   </view>
 </view>
+</block>
+<block wx:elif="{{currentAlbumId==='ranking'}}">
+<image class='bg-img' src='/images/icon/bgimg.png'></image>
+<view class='heads'>
+  <image class='cover-img' src='/images/icon/ranking.png'></image>
+  <view class='right-heads'>
+    <text class='title'>排行榜</text>
+    <view class='statis'>
+      <image class='listen' src='/images/icon/avatar.png'></image>
+      <text class='listened-count'>我的昵称</text>
+    </view>
+  </view>
+</view>
+</block>
+
+<block wx:else>
+<image class='bg-img' src='{{albumData.coverImg}}' mode='aspectFill'></image>
+<!-- </view> -->
+<view class='heads'>
+  <image class='cover-img' src='{{albumData.coverImg}}'></image>
+  <view class='right-heads'>
+    <text class='title'>{{albumData.title}}</text>
+    <view class='statis'>
+      <image class='listen' src='/images/icon/listen.png'></image>
+      <text class='listened-count'>{{albumData.listened}}</text>
+    </view>
+    <view class='statis'>
+      <image class='listen' src='/images/icon/collection-statis.png'></image>
+      <text class='listened-count'>{{albumData.collected}}</text>
+    </view>
+  </view>
+</view>
+</block>
+
+<view class='e-function'>
+  <view class='functions'>
+    <view class='function'>
+      <image src='/images/icon/e_play.png'></image>
+      <text>播放</text>
+    </view>
+    <view class='function' wx:if="{{currentAlbumId!=='my-cllections'&&currentAlbumId!=='daily-recom'&&currentAlbumId!=='ranking'}}" catchtap='onCollectionTap'>
+      <image src="{{collected? '/images/icon/d_collect.png' : '/images/icon/e_collect.png'}}"></image>
+      <text>收藏</text>
+    </view>
+    <view class='function'>
+      <image src='/images/icon/e_comment.png'></image>
+      <text>评论</text>
+    </view>
+    <view class='function'>
+      <image src='/images/icon/e_share.png'></image>
+      <text>分享</text>
+    </view>
+  </view>
 </view>
 
 <view class='songs-container'>
   <view style='width: 100%; height: 1px; background-color: #a6a6a6;'></view>
 
-  <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>1</text>
+  <block wx:for='{{albumData.songs}}' wx:for-item='item' wx:for-index='index'>
+    <view class='song-container'>
+      <view class='num-container'>
+        <text class='num'>{{index+1}}</text>
+      </view>
+      <view class='name-author'>
+        <text class='song-name'>{{item.songTitle}}</text>
+        <text class='song-author'>{{item.author}}</text>
+        <view class='horizon'></view>
+      </view>
     </view>
-    <view class='name-author'>
-      <text class='song-name'>ghost</text>
-      <text class='song-author'>Megumi Acorda - ghost</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
-
-   <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>2</text>
-    </view>
-    <view class='name-author'>
-      <text class='song-name'>Just the way you lie</text>
-      <text class='song-author'>Rihanna&Eminem</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
-
-  <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>3</text>
-    </view>
-    <view class='name-author'>
-      <text class='song-name'>Lose Yourself</text>
-      <text class='song-author'>Eminem</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
-
-  <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>4</text>
-    </view>
-    <view class='name-author'>
-      <text class='song-name'>This Is What You Came For</text>
-      <text class='song-author'>Rihanna</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
-
-  <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>5</text>
-    </view>
-    <view class='name-author'>
-      <text class='song-name'>See You Again</text>
-      <text class='song-author'>Carrie Underwood</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
-
-  <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>6</text>
-    </view>
-    <view class='name-author'>
-      <text class='song-name'>Feelings</text>
-      <text class='song-author'>Maroon 5</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
-
-  <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>7</text>
-    </view>
-    <view class='name-author'>
-      <text class='song-name'>Forgot About Dre</text>
-      <text class='song-author'>Eminem</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
-
-  <view class='song-container'>
-    <view class='num-container'>
-      <text class='num'>8</text>
-    </view>
-    <view class='name-author'>
-      <text class='song-name'>Sweet But Psycho</text>
-      <text class='song-author'>Ava Max</text>
-      <view class='horizon'></view>
-    </view>
-  </view>
+  </block>
 
   <view style="height: 120rpx;" />
 </view>
 
- <view>
- <template is='MusicController' data='{{isPlayingMusic}}'/>
- </view>
+<view>
+  <template is='MusicController' data='{{isPlayingMusic}}' />
+</view>
